# factory_manager

./: .gitignore  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: fc32bbb6d3c8_initial_migration.py
src/factory_manager/: admin.py  bootstrap.py  config.py  database.py  main.py  models.py  repositories.py  schemas.py  services.py  wiring.py
tests/: conftest.py  test_services.py
