[tool.poetry]
name = "factory-manager"
version = "0.1.0"
description = "A FastAPI application to manage a hierarchical directory of factories, sections, and equipment."
authors = ["Alexander Koval <alexander.koval.88@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "factory_manager", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
aiosqlite = "^0.20.0"
fastapi = {extras = ["all"], version = "^0.115.0"}
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
gunicorn = "^23.0.0"
sqlalchemy = "^2.0.35"
loguru = "^0.7.3"
sqladmin = "^0.19.0"
alembic = "^1.13.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.2.1"
httpx = "^0.25.0"

ruff = "^0.6.9"
black = "^23.10.0"
mypy = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle ошибки
    "W",  # pycodestyle предупреждения
    "F",  # pyflakes
    "I",  # isort (сортировка импортов)
    "B",  # flake8-bugbear (поиск вероятных багов)
    "C4", # flake8-comprehensions (улучшение comprehensions)
]
ignore = [
    "E501", # Длина строки,
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src"
]
testpaths = [
    "tests"
]
